# customer-service-chat-system

./: .dockerignore  .env.example  .gitignore  .mcp.json  .todo.md  AGENTS.md  CLAUDE.md  Helix Admin.html  README.md  skills-lock.json  specs.md
backend/: Cargo.toml  README.md  _run-server.cmd  env-loader.bat  run-db-tests.cmd  start-server.bat  start-server.ps1  start.ps1
backend/backend/crates/server/tests/: _smoke.rs
backend/crates/ai-providers/: Cargo.toml
backend/crates/ai-providers/src/: anthropic.rs  contract.rs  crypto.rs  gemini.rs  lib.rs  openai.rs  registry.rs  sse.rs
backend/crates/modules/ai/: Cargo.toml
backend/crates/modules/ai/src/: agent_audit.rs  agent_config.rs  agent_prompt.rs  agent_responder.rs  agent_routes.rs  agent_rules.rs  audit.rs  confidence.rs  crypto.rs  engine.rs  generation_record.rs  lib.rs  model.rs  prompt_routes.rs  prompt_store.rs  prompt_validate.rs  resolution.rs  routes.rs  service.rs  summary.rs  usage.rs
backend/crates/modules/ai/tests/: sc005_fourth_provider.rs
backend/crates/modules/analytics/: Cargo.toml
backend/crates/modules/analytics/src/: lib.rs  model.rs  queries.rs  routes.rs
backend/crates/modules/audit/: Cargo.toml
backend/crates/modules/audit/src/: lib.rs  model.rs  queries.rs  routes.rs
backend/crates/modules/authz/: Cargo.toml
backend/crates/modules/authz/src/: guard.rs  lib.rs  matrix.rs  permission.rs  role.rs
backend/crates/modules/billing/: Cargo.toml
backend/crates/modules/conversations/: Cargo.toml
backend/crates/modules/conversations/src/: audit.rs  lib.rs  model.rs  outbox.rs  queries.rs  routes.rs
backend/crates/modules/customers/: Cargo.toml
backend/crates/modules/customers/src/: audit.rs  lib.rs  model.rs  queries.rs  routes.rs
backend/crates/modules/email/: Cargo.toml
backend/crates/modules/email/src/: noop.rs  smtp.rs
backend/crates/modules/escalations/: Cargo.toml
backend/crates/modules/escalations/src/: audit.rs  events.rs  lib.rs  model.rs  presence.rs  queries.rs  routes.rs  routing.rs
backend/crates/modules/feedback/: Cargo.toml
backend/crates/modules/feedback/src/: lib.rs  model.rs  public_routes.rs  queries.rs  tenant_routes.rs
backend/crates/modules/flags/: Cargo.toml
backend/crates/modules/identity/: Cargo.toml
backend/crates/modules/identity/src/: audit.rs  lib.rs  password.rs  routes.rs  session.rs
backend/crates/modules/integrations/: Cargo.toml
backend/crates/modules/integrations/src/: audit.rs  crypto.rs  lib.rs  model.rs  queries.rs  retention.rs  routes.rs  status.rs  webhook.rs
backend/crates/modules/knowledge/: Cargo.toml
backend/crates/modules/knowledge/src/: chunking.rs  index_state.rs  indexer.rs  lib.rs  retrieval.rs  routes.rs  store.rs  upload.rs  validate.rs
backend/crates/modules/notifications/: Cargo.toml
backend/crates/modules/notifications/src/: emit.rs  lib.rs  model.rs  queries.rs  recipients.rs  routes.rs  worker.rs
backend/crates/modules/platform/: Cargo.toml
backend/crates/modules/prompts/: Cargo.toml
backend/crates/modules/rbac/: Cargo.toml
backend/crates/modules/tenancy/: Cargo.toml
backend/crates/modules/tenancy/src/: audit.rs  authorize.rs  invitations.rs  lib.rs  members.rs  routes.rs
backend/crates/modules/tools/: Cargo.toml
backend/crates/modules/tools/src/: approval.rs  audit.rs  executor.rs  lib.rs  model.rs  policy.rs  queries.rs  registry.rs  routes.rs
backend/crates/modules/users/: Cargo.toml
backend/crates/modules/whatsapp/: Cargo.toml
backend/crates/modules/widgets/: Cargo.toml  README.md
backend/crates/server/: Cargo.toml
backend/crates/server/src/: handlers.rs  lib.rs  main.rs  openapi.rs  rate_limit.rs  router.rs  state.rs
backend/crates/server/tests/: ai.rs  ai_agent.rs  ai_agent_prompt.rs  analytics_api.rs  audit_logs.rs  auth.rs  conversation_summary.rs  conversations.rs  cors.rs  customer_view_no_tool_leak.rs  customers.rs  engine_fallback.rs  engine_isolation.rs  engine_respond.rs  engine_supersede.rs  engine_tool_approval_approve.rs  engine_tool_approval_cancel.rs  engine_tool_approval_deny.rs  engine_tool_approval_expiry.rs  engine_tool_approval_race.rs  engine_tool_chain.rs  engine_tool_isolation.rs  engine_tool_refusal.rs  errors.rs  escalations.rs  feedback_api.rs  health.rs  integrations_catalog.rs  integrations_events.rs  integrations_isolation.rs  integrations_lifecycle.rs  integrations_rbac.rs  integrations_secret_confidentiality.rs  integrations_webhook.rs  knowledge_base.rs  knowledge_index_state.rs  live_deps.rs  message_confidence.rs  notifications.rs  openapi_contract.rs  (+29 more)
backend/crates/shared/cache/: Cargo.toml
backend/crates/shared/config/: Cargo.toml
backend/crates/shared/db/: Cargo.toml
backend/crates/shared/events/: Cargo.toml
backend/crates/shared/kernel/: Cargo.toml
backend/crates/shared/observability/: Cargo.toml
backend/crates/shared/storage/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_outbox.sql  0003_users.sql  0004_tenants.sql  0005_tenant_memberships.sql  0006_audit_logs.sql  0007_auth.sql  0008_cascade_fix.sql  0009_membership_guard_and_slug_audit.sql  0010_audit_enhancements.sql  0011_membership_guard_update.sql  0012_slug_audit_actor.sql  0013_audit_resource_required.sql  0014_slug_audit_require_actor.sql  0015_slug_audit_transaction_actor.sql  0016_tenant_business_metadata.sql  0017_tenant_directory_indexes.sql  0018_membership_status.sql  0019_tenant_invitations.sql  0020_invitation_email_delivery_status.sql  0021_invitation_delivery_outbox.sql  0022_outbox_delivery_claims.sql  0023_invitation_expired_status.sql  0024_invitation_expired_invariant.sql  0025_customers.sql  0026_conversations.sql  0027_composite_fk_customer_children.sql  0028_customer_search_indexes.sql  0029_identifier_soft_delete.sql  0030_customer_identifier_cascade.sql  0031_invitation_delivery_error.sql  0032_normalize_identifiers.sql  0033_conversation_core.sql  0034_messages.sql  0035_agent_skills.sql  0036_agent_availability.sql  0037_escalations.sql  0038_ai_configurations.sql  0039_ai_credentials.sql  0040_ai_usage_records.sql  (+17 more)
(+771 files in other folders)
