[workspace]
resolver = "2"
members = [
  "crates/server", "crates/shared/*", "crates/modules/*", "crates/ai-providers"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "signal", "time"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
tower-http = { version = "0.6", features = ["cors", "catch-panic"] }
async-trait = "0.1"
argon2 = "0.5"
axum-extra = { version = "0.10", features = ["cookie"] }
futures = "0.3"
http-body-util = "0.1"
jsonwebtoken = "9"
rand = "0.8"
serial_test = "3"

