[workspace]
resolver = "2"
members = [
  "crates/server", "crates/shared/*", "crates/modules/*", "crates/ai-providers"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
axum = { version = "0.8", features = ["multipart"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "openapi_extensions"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "signal", "time"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
tower-http = { version = "0.6", features = ["cors", "catch-panic"] }
async-trait = "0.1"
argon2 = "0.5"
axum-extra = { version = "0.10", features = ["cookie"] }
futures = "0.3"
http-body-util = "0.1"
jsonwebtoken = "9"
rand = "0.8"
serial_test = "3"
hex = "0.4"
getrandom = "0.3"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
aes-gcm = "0.10"
base64 = "0.22"
bytes = "1"
zeroize = { version = "1", features = ["derive"] }
wiremock = "0.6"
ammonia = "4"
pdf-extract = "0.7"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls"] }
