[package]
name = "ai-providers"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2"
tokio.workspace = true
tracing.workspace = true
zeroize.workspace = true
bytes = "1"

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[features]
test-providers = []
