[package]
name = "ai-providers"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes = "1"
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[features]
test-providers = []
