[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
cache = { path = "../shared/cache" }
config = { path = "../shared/config" }
db = { path = "../shared/db" }
identity = { path = "../modules/identity" }
kernel = { path = "../shared/kernel" }
observability = { path = "../shared/observability" }
sqlx = { workspace = true, features = ["postgres"] }
tenancy = { path = "../modules/tenancy" }
tokio.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
http-body-util.workspace = true
serde_json = "1"
tower.workspace = true
uuid.workspace = true

