[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
analytics = { path = "../modules/analytics" }
audit = { path = "../modules/audit" }
authz = { path = "../modules/authz" }
axum.workspace = true
cache = { path = "../shared/cache" }
chrono = { workspace = true }
config = { path = "../shared/config" }
conversations = { path = "../modules/conversations" }
customers = { path = "../modules/customers" }
escalations = { path = "../modules/escalations" }
feedback = { path = "../modules/feedback" }
db = { path = "../shared/db" }
identity = { path = "../modules/identity" }
integrations = { path = "../modules/integrations" }
kernel = { path = "../shared/kernel" }
email = { path = "../modules/email" }
notifications = { path = "../modules/notifications" }
observability = { path = "../shared/observability" }
serde = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
tenancy = { path = "../modules/tenancy" }
ai = { path = "../modules/ai" }
knowledge = { path = "../modules/knowledge" }
tools = { path = "../modules/tools" }
widgets = { path = "../modules/widgets" }
storage = { path = "../shared/storage" }
uuid = { workspace = true }
tokio.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
ai-providers = { path = "../ai-providers" }
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
getrandom.workspace = true
hex.workspace = true
hmac.workspace = true
http-body-util.workspace = true
rand.workspace = true
serial_test.workspace = true
serde_json = "1"
sha2.workspace = true
tower.workspace = true
uuid.workspace = true
wiremock.workspace = true
