[package]
name = "audit"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono = { workspace = true, features = ["serde"] }
hex.workspace = true
kernel = { path = "../../shared/kernel" }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono"] }
tenancy = { path = "../tenancy" }
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
