[package]
name = "authz"
version.workspace = true
edition = "2024"

[dependencies]
axum.workspace = true
config = { path = "../../shared/config" }
identity = { path = "../identity" }
kernel = { path = "../../shared/kernel" }
serde.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
