[package]
name = "conversations"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
customers = { path = "../customers" }
kernel = { path = "../../shared/kernel" }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono"] }
tenancy = { path = "../tenancy" }
hex.workspace = true
identity = { path = "../identity" }
time = "0.3"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
