[package]
name = "identity"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
config = { path = "../../shared/config" }
kernel = { path = "../../shared/kernel" }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
tracing.workspace = true
uuid.workspace = true

