[package]
name = "identity"
version.workspace = true
edition.workspace = true

[dependencies]
argon2.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
config = { path = "../../shared/config" }
jsonwebtoken.workspace = true
kernel = { path = "../../shared/kernel" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
utoipa.workspace = true

[dev-dependencies]
tower.workspace = true

