[package]
name = "integrations"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm.workspace = true
axum.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
config = { path = "../../shared/config" }
hex.workspace = true
hmac.workspace = true
identity = { path = "../identity" }
kernel = { path = "../../shared/kernel" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono"] }
tenancy = { path = "../tenancy" }
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
db = { path = "../../shared/db" }
