[package]
name = "knowledge"
version.workspace = true
edition.workspace = true

[dependencies]
ammonia.workspace = true
async-trait.workspace = true
authz = { path = "../authz" }
axum.workspace = true
chrono = { workspace = true, features = ["serde"] }
identity = { path = "../identity" }
kernel = { path = "../../shared/kernel" }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono"] }
storage = { path = "../../shared/storage" }
tenancy = { path = "../tenancy" }
base64.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
bytes.workspace = true
http-body-util.workspace = true
tokio.workspace = true

