[package]
name = "notifications"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
percent-encoding = "2"
url = "2"
serde.workspace = true
tracing.workspace = true
uuid.workspace = true

