[package]
name = "notifications"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono = { workspace = true, features = ["serde"] }
hex.workspace = true
kernel = { path = "../../shared/kernel" }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono"] }
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true

# Path dependencies
authz = { path = "../authz" }
identity = { path = "../identity" }
tenancy = { path = "../tenancy" }
escalations = { path = "../escalations" }
