[package]
name = "tenancy"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
config = { path = "../../shared/config" }
identity = { path = "../identity" }
kernel = { path = "../../shared/kernel" }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
tracing.workspace = true
uuid.workspace = true

