[package]
name = "tenancy"
version.workspace = true
edition.workspace = true

[dependencies]
authz = { path = "../authz" }
axum.workspace = true
chrono.workspace = true
config = { path = "../../shared/config" }
hex.workspace = true
identity = { path = "../identity" }
kernel = { path = "../../shared/kernel" }
email = { path = "../email" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
tracing.workspace = true
uuid.workspace = true
url = "2"
utoipa.workspace = true

[dev-dependencies]
async-trait.workspace = true
