[package]
name = "tools"
version.workspace = true
edition.workspace = true

[dependencies]
ai-providers = { path = "../../ai-providers" }
async-trait.workspace = true
base64.workspace = true
identity = { path = "../identity" }
axum.workspace = true
chrono = { workspace = true, features = ["serde"] }
config = { path = "../../shared/config" }
conversations = { path = "../conversations" }
customers = { path = "../customers" }
kernel = { path = "../../shared/kernel" }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono"] }
tenancy = { path = "../tenancy" }
tokio.workspace = true
reqwest = { workspace = true, features = ["json"] }
tracing.workspace = true
url.workspace = true
utoipa.workspace = true
uuid.workspace = true
