[package]
name = "whatsapp"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
config = { path = "../../shared/config" }
conversations = { path = "../conversations" }
customers = { path = "../customers" }
futures.workspace = true
hex.workspace = true
hmac.workspace = true
integrations = { path = "../integrations" }
kernel = { path = "../../shared/kernel" }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono"] }
storage = { path = "../../shared/storage" }
tenancy = { path = "../tenancy" }
utoipa.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
db = { path = "../../shared/db" }
http-body-util.workspace = true
tower.workspace = true
