[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
observability = { path = "../observability" }
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
serde_json.workspace = true
serial_test.workspace = true
chrono.workspace = true

